# claude-skills

./: .gitignore  AUTHORING.md  CLAUDE.md  Makefile  README.md  install.sh  run-sandbox.sh
.github/: pull_request_template.md
.github/scripts/: generate-pages-index.py  update-readme-results.py
.github/workflows/: e2e-tests.yml
docker/: Dockerfile  entrypoint.sh
docs/: audit-anomaly-catalogue.md  skills-overview.md  testing.md
docs/reports/: ecosystem-skill-practices.md
skills/_template/: SKILL.md
skills/agent-optimize/: SKILL.md
skills/dev-record/: SKILL.md  install.sh  plugin.json
skills/flesh-out/: SKILL.md  responsibilities.md
skills/generator-coding/: SKILL.md
skills/no-pre-existing-failures/: SKILL.md
skills/review-skill/: SKILL.md  responsibilities.md
skills/review-steps/: SKILL.md  responsibilities.md
skills/sandbox/: SKILL.md  responsibilities.md
skills/sdlc-cross-review/: SKILL.md
test_fw/: README.md  pyproject.toml
test_fw/src/claude_test_fw/: __init__.py  _audit.py  _instrumented.py  _mcp.py  _models.py  _patch.py  _query.py  _report.py  _sandbox.py  _sdk_helpers.py  _steps.py  plugin.py
test_fw/src/claude_test_fw/ablation/: __main__.py  embedder.py  matcher.py  reporter.py
test_fw/src/claude_test_fw/ablation/data/: word_freq_en.tsv
test_fw/src/claude_test_fw/ablation/fixtures/flesh-out/raw-notes-basic/: expected-good.md
test_fw/tests/: conftest.py  test_chunker.py  test_integration.py  test_scorer.py  test_steps_sandbox_helpers.py
tests/: README.md  conftest.py  pyproject.toml
tests/skills/: conftest.py
tests/skills/dev-record/: README.md  conftest.py  test_bare_install.py  test_double_install.py  test_full_workflow.py  test_hook_detection.py  test_plan_update.py
tests/skills/fixtures/review_skill/flawed-skill/: SKILL.md  unused-reference.md
tests/skills/generator-coding/: conftest.py  test_generator.py
tests/skills/pipeline-memory/: conftest.py  test_pipeline_recall.py
tests/skills/pipeline-memory/fixtures/event-sourcing-draft/: input.md
tests/skills/review-skill/: conftest.py  test_review_skill.py
tests/skills/review-steps/: conftest.py  test_ablation_fixtures.py  test_review.py
tests/skills/review-steps/fixtures/event-sourcing-draft/: expected-ablated.md  expected-good.md  manifest.yaml
tests/skills/sandbox/: conftest.py  test_sandbox.py  test_sandbox_docker.py
tests/tools/: README.md
tests/tools/ablation/: README.md  chunker.py  cli.py  reporter.py  scorer.py  test_chunker.py  test_integration.py  test_scorer.py  wordfreq.py
tests/tools/ablation/fixtures/flesh-out/raw-notes-basic/: expected-ablated.md  input.md  manifest.yaml
(+26 files in other folders)
