[project]
name = "claude-test-fw"
version = "0.1.0"
description = "Test framework for claude-skills E2E and ablation testing"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "click>=8.0",
    "marko>=2.0",
    "numpy>=1.24",
    "pytest>=8,<9",
    "pytest-asyncio",
    "pytest-html",
    "pyyaml>=6.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
]

[project.scripts]
ablation = "claude_test_fw.ablation.cli:main"

[project.entry-points."pytest11"]
claude_test_fw = "claude_test_fw.plugin"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"claude_test_fw.ablation" = ["data/*.tsv", "fixtures/**/*"]

[project.optional-dependencies]
neural = ["sentence-transformers>=2.2"]
