[project]
name = "claude-skills-tests"
version = "0.0.1"
description = "End-to-end tests for claude-skills"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "click>=8.0",
    "marko>=2.0",
    "numpy>=1.24",
    "pytest",
    "pytest-asyncio",
    "pytest-html",
    "pyyaml>=6.0",
    "rich>=13.0",
    "scikit-learn>=1.3",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[project.scripts]
ablation = "tools.ablation.cli:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tools*"]

[project.optional-dependencies]
neural = ["sentence-transformers>=2.2"]
dev = ["pytest>=7.0"]
