[project]
name = "claude-skills-tests"
version = "0.0.1"
description = "End-to-end tests for claude-skills"
requires-python = ">=3.10"
dependencies = [
    "claude-agent-sdk",
    "pytest>=8,<9",
    "pytest-asyncio",
    "pytest-html",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
