[project]
name = "claude-skills-tests"
version = "0.0.1"
description = "End-to-end skill tests for claude-skills"
license = "Unlicense"
requires-python = ">=3.10"
dependencies = [
    "claude-test-fw",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "docker: requires a local docker daemon; excluded from default CI runs",
]

[tool.setuptools]
packages = []

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
